fix(chromatic): Fix chromatic publishing
After converting the `kaoto-ui` repository into a monorepo,
chromatic needs to know where is the package that needs to be
published.

relates to: https://github.com/KaotoIO/kaoto-ui/issues/2159

--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -4,7 +4,11 @@
 name: 📖 Storybook (via Chromatic)
 
 # Event for the workflow
-on: push
+on:
+  push:
+    branches-ignore:
+      - "renovate/**"
+      - "dependabot/**"
 
 # List of jobs
 jobs:
@@ -29,3 +33,4 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           projectToken: 14f589a59855
           buildScriptName: build:storybook
+          workingDir: packages/kaoto-ui
