chore(coverage): Ignore SourceCodeEditor component coverage
In its current form, we can't test the SourceCodeEditor through unit test,
in that sense, we leverage e2e tests to ensure that it's working.

This commit ignore its path to avoid affecting the coverage report.

--- a/.github/codecov.yml
+++ b/.github/codecov.yml
@@ -13,3 +13,5 @@ ignore:
   - "**/index.ts"
   - "**/store/data/**"
   - "**/stubs/**"
+  # Ignore SourceCode editor coverage because it's not possible to test it through Jest (it's a monaco editor)
+  - "packages/kaoto-ui/src/components/SourceCode/*.{ts,tsx}"
