--- a/packages/kaoto-ui/package.json
+++ b/packages/kaoto-ui/package.json
@@ -100,7 +100,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
-    "@types/jest": "^29.5.2",
+    "@types/jest": "^29.5.3",
     "@types/lodash.clonedeep": "^4.5.7",
     "@types/lodash.isequal": "^4.5.6",
     "@types/node": "^20.3.1",
@@ -131,8 +131,8 @@
     "eslint-plugin-testing-library": "5.11.0",
     "file-selector": "^0.6.0",
     "html-webpack-plugin": "5.5.3",
-    "jest": "29.6.1",
-    "jest-environment-jsdom": "^29.3.1",
+    "jest": "^29.6.2",
+    "jest-environment-jsdom": "^29.6.2",
     "lint-staged": "13.2.3",
     "mini-css-extract-plugin": "2.7.6",
     "msw": "^1.2.2",
@@ -146,7 +146,7 @@
     "storybook": "^7.0.23",
     "style-loader": "3.3.3",
     "tar-webpack-plugin": "^0.1.1",
-    "ts-jest": "29.1.1",
+    "ts-jest": "^29.1.1",
     "ts-loader": "9.4.4",
     "tsc-watch": "^6.0.4",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
