--- a/packages/kaoto-ui/package.json
+++ b/packages/kaoto-ui/package.json
@@ -130,6 +130,7 @@
     "eslint-plugin-storybook": "^0.6.12",
     "eslint-plugin-testing-library": "5.11.0",
     "file-selector": "^0.6.0",
+    "git-revision-webpack-plugin": "^5.0.0",
     "html-webpack-plugin": "5.5.3",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
