--- a/packages/kaoto-ui/package.json
+++ b/packages/kaoto-ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kaoto/kaoto-ui",
-  "version": "1.2.0-dev",
+  "version": "1.2.0",
   "federatedModuleName": "kaoto",
   "engines": {
     "node": ">=16.x"
